--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ body {
   display: flex;
   justify-content: center;
   align-content: center;
-  color: hsl(0, 0%, 100%);
   min-width: 375px;
   max-width: 1440px;
 }
@@ -20,18 +19,27 @@ p {
   font-size: 18px;
 }
 /* Card Content Wrapper */
+
+.container {
+  display: flex;
+  justify-content: center;
+}
+
 .card {
   background-color: hsl(216, 50%, 16%);
-  width: 300px;
-  display: flex;
-  flex-direction: column;
+  margin: 50px 50px;
+  width: 290px;
+  padding: 20px;
+  border-radius: 12px;
 }
 
 .overlay {
   position: relative;
 }
 .nft-img {
-  width: 275px;
+  width: 100%;
+  border-radius: 15px;
+  margin-bottom: 20px;
 }
 
 .view-icon {
@@ -41,12 +49,87 @@ p {
   opacity: 0;
 }
 
+.overlay-color {
+  position: absolute;
+  top: 0%;
+  width: 100%;
+  height: 92%;
+  border-radius: 12px;
+  background-color: hsla(178, 100%, 50%, 0);
+}
+
+.overlay-color:hover {
+  background-color: hsla(178, 100%, 50%, 0.317);
+}
+
 .view-icon:hover {
   opacity: 1;
 }
 
-.description .sale-duration {
+.title {
+  color: white;
+  font-weight: 600;
+}
+
+.description {
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+.author {
   color: hsl(215, 51%, 70%);
+}
+
+.description,
+.sale-duration {
+  color: hsl(215, 51%, 70%);
+  font-weight: 300;
+}
+
+.price {
+  color: hsla(178, 100%, 50%);
+}
+
+/* 2 column container with ethereum and time */
+
+.eth-time {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 25px;
+}
+
+/* ETHEREUM CONTAINER */
+.eth-container {
+  display: flex;
+  gap: 7px;
+}
+
+/* SALE CONTAINER */
+.sale-container {
+  display: flex;
+  gap: 7px;
+}
+
+/* dvider */
+.divider {
+  border-top: 1px solid hsl(215, 32%, 27%);
+  margin-bottom: 25px;
+}
+
+/* author info */
+
+.author-container {
+  display: flex;
+  gap: 5px;
+  align-items: center;
+}
+
+.author-img {
+  width: 35px;
+}
+
+span {
+  color: white;
 }
 
 /* # Front-end Style Guide
