--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   margin: 0;
   padding: 0;
   font-family: "Outfit", sans-serif;
+  box-sizing: border-box;
 }
 
 body {
@@ -35,35 +36,41 @@ p {
 
 .overlay {
   position: relative;
-}
-.nft-img {
   width: 100%;
+}
+
+.overlay-content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 255, 247, 0.372);
+  border-radius: 12px;
+  display: flex;
+  justify-content: center;
+  opacity: 0;
+  /* align-self: center; */
+}
+
+.overlay-content:hover {
+  opacity: 1;
+  cursor: pointer;
+}
+
+.eye {
+  position: absolute;
+  /* top: 40%;
+  right: 40%; */
+  align-self: center;
+}
+
+.nft-img {
+  display: block;
+  width: 100%;
+  height: 100%;
   border-radius: 15px;
   margin-bottom: 20px;
-}
-
-.view-icon {
-  position: absolute;
-  top: 40%;
-  right: 40%;
-  opacity: 0;
-}
-
-.overlay-color {
-  position: absolute;
-  top: 0%;
-  width: 100%;
-  height: 92%;
-  border-radius: 12px;
-  background-color: hsla(178, 100%, 50%, 0);
-}
-
-.overlay-color:hover {
-  background-color: hsla(178, 100%, 50%, 0.317);
-}
-
-.view-icon:hover {
-  opacity: 1;
 }
 
 .title {
@@ -71,9 +78,15 @@ p {
   font-weight: 600;
 }
 
+.title:hover {
+  color: rgba(0, 255, 247);
+  cursor: pointer;
+}
+
 .description {
   margin-bottom: 20px;
   margin-top: 20px;
+  font-weight: 300;
 }
 
 .author {
@@ -128,8 +141,14 @@ p {
   width: 35px;
 }
 
-span {
+a {
+  text-decoration: none;
   color: white;
+}
+
+a:hover {
+  color: rgba(0, 255, 247);
+  cursor: pointer;
 }
 
 /* # Front-end Style Guide
